--- a/requirements.txt
+++ b/requirements.txt
@@ -41,6 +41,7 @@ fsspec==2023.10.0
 gitdb==4.0.11
 GitPython==3.1.43
 greenlet==3.0.3
+gunicorn==21.2.0
 h11==0.14.0
 idna==3.6
 importlib-metadata==6.8.0
